--- a/src/templates/apps/dicepool-attribute.html
+++ b/src/templates/apps/dicepool-attribute.html
@@ -1,33 +1,27 @@
 <form id="dice-pool-form" class="sta-form">
     <div class=" dice-pool flexcol">
-        <div class="flexrow">
-            <label class="label">{{localize 'sta.apps.focus'}}</label>
-            <input type="checkbox" name="usingFocus" id="usingFocus">
-        </div>
-        <div class="flexrow">
-            <label class="label">{{localize 'sta.apps.determination'}}</label>
-            <input type="checkbox" name="usingDetermination" id="usingDetermination">
-        </div>
-        <div class="flexrow">
-            <label class="label" style="flex: 80%;">{{localize 'sta.apps.complicationrange'}}</label>
-            <input style="text-align: center;" class="numeric-entry" type="number" name="complicationRange" value="1" id="complicationRange">
-        </div>
-        <div class="flexrow">
-            <div style="flex: 1;"><label class="label">{{localize 'sta.apps.pool'}}</label></div>
-            <div style="flex: 1;display: flex;flex-direction: column;">
-                <div class="flexrow">
-                    <span class="label" style="flex: 1; text-align: left;">{{localize 'sta.counting.one'}}</span>
-                    <span style="flex: 1; text-align: center;"></span>
-                    <span class="label" style="flex: 1; text-align: center;">{{localize 'sta.counting.two'}}</span>
-                    <span style="flex: 1; text-align: center;"></span>
-                    <span class="label" style="flex: 1; text-align: center;">{{localize 'sta.counting.three'}}</span>
-                    <span style="flex: 1; text-align: center;"></span>
-                    <span class="label" style="flex: 1; text-align: center;">{{localize 'sta.counting.four'}}</span>
-                    <span style="flex: 1; text-align: center;"></span>
-                    <span class="label" style="flex: 1; text-align: center;">{{localize 'sta.counting.five'}}</span>
-                </div>
-                <input type="range" name="dicePoolSlider" min="1" max="5" value="{{defaultValue}}" class="slider" id="dicePoolSlider">
+        <div class="flexrow" id="dice-pool-form-field-pool-size">
+            <div><!-- style="flex: 1;"--><label class="label">{{localize 'sta.apps.pool'}}</label></div>
+            <div><!--  style="flex: 1;display: flex;flex-direction: column;" -->
+                <datalist id="numdice">
+                    {{#repeat 5}}
+                    <option value="{{@index}}" label="{{@index}}">{{@index}}</option>
+                    {{/repeat}}
+                </datalist>
+                <input type="range" name="dicePoolSlider" min="1" max="5" value="{{dicePool}}" class="slider" id="dicePoolSlider" list="numdice" step="1" />
             </div>
+        </div>
+        <div class="flexrow" id="dice-pool-form-field-focus">
+            <label class="label">{{localize 'sta.apps.focus'}}</label>
+            <input type="checkbox" name="usingFocus" id="usingFocus" />
+        </div>
+        <div class="flexrow" id="dice-pool-form-field-determination">
+            <label class="label">{{localize 'sta.apps.determination'}}</label>
+            <input type="checkbox" name="usingDetermination" id="usingDetermination" />
+        </div>
+        <div class="flexrow" id="dice-pool-form-field-complication">
+            <label class="label">{{localize 'sta.apps.complicationrange'}}</label><!-- style="flex: 80%;"-->
+            <input class="numeric-entry" type="number" name="complicationRange" value="{{complicationRange}}" id="complicationRange" /><!-- style="text-align: center;" -->
         </div>
     </div>    
 </form>
