Update to class name on roll message

--- a/src/templates/chat/roll-task.html
+++ b/src/templates/chat/roll-task.html
@@ -1,4 +1,4 @@
- <div class="sta roll attribute">
+ <div class="sta roll task">
     <div class="dice-roll">
         <div class="dice-result">
             <div class="dice-formula">
@@ -40,9 +40,9 @@
             </h4>
         </div>
     </div>
-    <div class="reroll-result attribute">
+    <div class="reroll-result task">
         <span>{{localize 'sta.roll.rerollresults'}}</span>
-        <input id="actor" type="hidden" value="{{actor.id}}" />
+        <input id="actor" type="hidden" value="{{actor._id}}" />
         <input id="selectedBase" type="hidden" value="{{selectedBase}}" />
         <input id="selectedSkill" type="hidden" value="{{selectedSkill}}" />
         <input id="speakerId" type="hidden" value="{{speakerId}}" />
