Re-implemented Challenge Rolls and added roll privacy support.
FEATURES:
* Added the ability for actors to perform challenge rolls.
* Re-implemented challenge rolls as the STAChallengeRoll class.
* Updated the base STARoll class to properly process roll privacy,
  which alters the behavior of roll chat templates.
* Added roll privacy support to the task roll chat template.
* Moved challenge roll chat HTML into a proper template.
* Gave both roll dialogs unique IDs, so that multiple dialogs of the
  same type cannot be instantiated (which would violate unique selector
  IDs).
* Added a title to both roll dialog types. For tasks, this draws from
  the two stats being used (e.g. Control + Engineering). For challenges,
  it either draws from the weapon name or simply says "Challenge Roll"
  (or its localized equivalent).
* Moved all remaining "roll" functions (i.e. non-task, non-challenge)
  into comments outside of the STARoll class definitions.
  * TODO: Still need to re-implement the send-to-chat aspect of these.

FIXES:
* Fixed incorrect data-stat-type tags in actor sheet templates.
* Slightly altered the task roll dialog layout.

--- a/src/styles/sta.css
+++ b/src/styles/sta.css
@@ -234,9 +234,40 @@
 {
   padding: 4px 5px;
 }
-.dice-pool span.label
+.dice-pool .flexrow.challenge-row
+{
+  align-items: center;
+  justify-content: center;
+}
+.dice-pool .flexrow.challenge-row input
+{
+  width: unset;
+  min-width: 3rem;
+  flex-grow: 0;
+  text-align: center;
+  margin-right: 1rem;
+}
+.dice-pool .flexrow.challenge-row label
+{
+  flex: 0;
+  white-space: nowrap;
+}
+.dice-pool span.label,
+.dice-pool h1.label
 {
   text-align: center;
+}
+.dice-pool div#dice-pool-form-field-focus
+{
+  flex-grow: 1;
+}
+.dice-pool div#dice-pool-form-field-determination
+{
+  flex-grow: 2;
+}
+.dice-pool h1.label
+{
+  margin: 0;
 }
 .dice-pool datalist
 {
@@ -253,7 +284,8 @@
   background: unset;
   border: 0;
 }
-.sta.roll.task .dice-roll .dice-result .dice-tooltip .dice .dice-rolls
+.sta.roll.task .dice-roll .dice-result .dice-tooltip .dice .dice-rolls,
+.sta.roll.challenge .dice-roll .dice-result .dice-tooltip .dice .dice-rolls
 {
   display: flex;
   justify-content: center;
